Fix: Overflow issue when container is inside other container [ED-4964]

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -23,6 +23,9 @@
 	text-align: var( --text-align );
 	flex: 1 1 var( --flex-basis );
 	width: var( --width );
+	// Set `min-width` to fix nested Containers shrink bug (ED-4964).
+	// Ref: https://stackoverflow.com/questions/43934648/how-to-make-flexbox-items-shrink-correctly-when-in-a-nested-container
+	min-width: 0;
 	// Use the `min()` function to fix cases when a top-level Container is 100% width due to `max-width: 100%;`,
 	// or cases when a nested Container overflows the parent Container due to `max-width: 1140px;`.
 	// Capital `M` in order to use the CSS function and not the SCSS one.
